--- a/mvc/views/item_list.erb
+++ b/mvc/views/item_list.erb
@@ -50,6 +50,8 @@ tr:nth-child(even) {
 </table>
 
 <a href='/items/add' method='get'>Add </a>
+<br>
+<a href='/categories' method='get'> View Categories </a>
 </body>
 </html>
 
